# AtomFit-Backend

./: .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
.github/workflows/: lints.yml
alembic/: env.py
alembic/versions/: 2024_04_10_1704-8a60c47778d4_init_user_and_usermetrics.py  2024_04_10_2157-1e3f5d223fdd_swap_is_male_to_user_metrics.py  2024_04_14_1524-b4e646026dac_merge_usermetrics_into_user.py  2024_04_14_1533-fac4760f11ed_add_index_to_user_email.py  2024_04_17_2018-16372dc1347b_add_meal_nutrients_table.py  2024_04_18_1705-0eb9d8472b0d_add_user_goal_nutrients_table.py  2024_05_10_1619-038e9f4f8afe_add_exercise_and_image_models.py
src/: config.py  database.py  main.py
src/api/: auth.py  dependencies.py
src/api/routers/: __init__.py  auth.py  images.py  meal_nutrients.py  users.py
src/api/routers/workout/: exercises.py
src/auth/: tokens.py  util.py  validators.py
src/exeptions/: users.py
src/models/: images.py  users.py
src/models/nutrition/: meal_nutrients.py  user_goal_nutrients.py
src/models/workout/: exercise.py
src/repositories/: images.py  users.py
src/repositories/nutriton/: meal_nutrients.py  user_goal_nutrients.py
src/repositories/workout/: exercises.py
src/schemas/: images.py  tokens.py  users.py
src/schemas/nutrition/: meal_nutrients.py
src/schemas/workout/: exercises.py
src/services/: auth.py  tokens.py  users.py
src/services/nutrition/: meal_nutirents.py  user_nutrients_goal.py
src/services/workout/: exercise.py
src/utils/: repositories.py  unit_of_work.py
