[tool.poetry]
name = "atomfit-backend"
version = "0.1.0"
description = ""
authors = ["stanislavCasciuc <stanislav.casciuc@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.1"
uvicorn = "^0.29.0"
sqlalchemy = "^2.0.29"
pydantic-settings = "^2.2.1"
alembic = "^1.13.1"
asyncpg = "^0.29.0"
bcrypt = "^4.1.2"
jwt = "^1.3.1"
pyjwt = "^2.8.0"
pydantic = {extras = ["email"], version = "^2.6.4"}
mypy = "^1.9.0"

[tool.mypy]
python_version = "3.12"
files = ["src/main.py"]
pretty = true
strict = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
